# Aged_Care_Pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_scheduler.py  setup.py
.github/workflows/: ci.yml
aged_care_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analysis/: comparison.ipynb
config/: global_settings.py
data/processed/operations/: operations_29_04_2025.csv
data/processed/rads/: rads_29_04_2025.csv
data/references/: NIDs_Only.csv
delivery/: api_push_delivery.py  email_delivery.py
docs/: architecture.md  roadmap.md
docs/adr/: 0001-record-architecture-decisions.md
interfaces/: base_parser.py  base_scheduler.py  base_scraper.py  base_writer.py
monitoring/: alerting.py  healthcheck.py
parsers/: field_paths.py  operations_parser.py  rads_parser.py
parsers/operations/: operations_field_paths.py  operations_parser.py
parsers/rads/: rads_field_paths.py  rads_parser.py
scheduler/: apscheduler_runner.py  task_registry.py
scrapers/: operations_scraper.py  rads_scraper.py
services/: operations_service.py
src/aged_care_pipeline/: __init__.py  __main__.py  cli.py  logging_config.py
tests/: README.md
tests/test_end_to_end/: test_full_pipeline.py  test_operations_pipeline.py
tests/test_parsers/: test_operations_parser.py
tests/test_scrapers/: test_operations_scraper.py
tests/test_services/: test_operations_service.py
tests/test_writers/: test_csv_writer.py  test_csv_writers.py
utils/: limiter.py  logger.py  request_handler.py  retry.py  validator.py
writers/: csv_writer.py
(+33 files in other folders)
